Fixed some styling issues on mobile concerning the day navigation

--- a/features/todoOverview/todoOverview.module.scss
+++ b/features/todoOverview/todoOverview.module.scss
@@ -56,7 +56,7 @@
 
 .directionIndicator {
     position: absolute;
-    top: 25px;
+    top: -10px;
     left: calc(50% - 30px);
     z-index: z-index.$z-index-todo-overview-direction-indicator;
     display: none;
