--- a/primitives/dayNavigation/dayNavigation.module.scss
+++ b/primitives/dayNavigation/dayNavigation.module.scss
@@ -1,3 +1,9 @@
+@use '../../styles/settings/spacing';
+
+.container {
+    margin-bottom: spacing.$spacing-large;
+}
+
 .list {
     padding: 0;
     margin: 0;
