--- a/primitives/mainLayout/mainLayout.module.scss
+++ b/primitives/mainLayout/mainLayout.module.scss
@@ -16,7 +16,11 @@
     z-index: z-index.$z-index-main-header;
     top: 0;
     height: auto;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+
+    @include mq($from: tablet) {
+        margin-bottom: 50px;
+    }
 }
 
 .body {
